--- a/index.css
+++ b/index.css
@@ -236,16 +236,18 @@ text-align: center;
 display: flex;
 text-decoration: none; }
 
+
+
 button {
-  background-color: var(--primary-color);
-  border: 1px solid var(--accent-color);
+  background-color: blue; /*var(--primary-color);*/
+  /*border: 1px solid var(--accent-color);*/ ;
   display: flex;
   padding:.3em;
   align-self: center;
   cursor: pointer;
   border-radius: 50px;
   transition:.3s ease-in-out;
-  color: var(--text-color);
+  color: white; /*var(--text-color);*/
   width: 200px; /* Largura do botão */
   height: 40px;  /* Altura do botão */
   font-size: 20px; /* Tamanho da fonte */
@@ -277,6 +279,7 @@ button {
 footer {
   position: fixed;
   height:auto;
+  width: 100%;
 
 }
  
