--- a/media_screen.css
+++ b/media_screen.css
@@ -1,22 +1,44 @@
 
-@media only screen and (max-width: 768px) {
-
-  header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }  
-
-  nav {
-      display: flex;
-      font-size: 15px;
-  }  
-
-  fieldset {
-      margin: 1px;
+/* Telas pequenas (smartphones) */
+@media (max-width: 600px) {
+    body {
+      width: 100%;
+      height: 100%;
+      font-size: 10px;
+    }
+ .button_pr {
+        top: 50%;
+        left: 25%;
   }
 
+.accent-lines {
+  height: 100%;
+}
+
+.mountains {
+  bottom: -40%;
+  }
+
+}
   
+  /* Telas médias (tablets) */
+  @media (min-width: 601px) and (max-width: 1024px) {
+    body {
+      height: 100%;
+      width: 100%;
+      font-size: 15px;
+    }
+
+    .accent-lines {
+      height: 100%;
+    }    
+
+    .mountains {
+      bottom: -40%;
+      }    
+
+    .button_pr {
+        top: 45%;
+        left: 40%;
+  }
+}
